# FOCUS-Fabric

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_MANIFEST.json  SECURITY.md  SHA256SUMS  pyproject.toml
.codex/: config.toml
.codex/agents/: architecture_scientist.toml  benchmark_adversary.toml  claim_auditor.toml  default.toml  kernel_engineer.toml  memory_redteam.toml  reproducibility_auditor.toml  research_scout.toml
.github/workflows/: ci.yml
autonomy/: gates.json  hypotheses.json
checkpoints/: README.md
docs/: ARCHITECTURE.md  CLAIMS.md  CLAIMS_LEDGER.json  CODEX_AUTONOMY.md  EVALUATION.md  FOCUS_LINEAGE.md  LIMITATIONS.md  MODEL_CARD.md  PAPER_DRAFT.md  PUBLICATION_STATUS.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  RESEARCH_SYNTHESIS_2026-07.md  THREAT_MODEL.md  WEAKNESS_AUDIT.md
examples/: minimal_fabric.py  typed_agent_memory.py
references/: literature_2026-07.json
results/: agent_memory_benchmark.json  autonomy_dry_run.json  fabric_benchmark.csv  fabric_benchmark.json  gpu_benchmark.json  holdout_271828.json  holdout_314159.json  holdout_selftest.json  randomized_holdout_suite.json
scripts/: benchmark_fabric.py
scripts/autonomy/: detect_drift.py  (+7 more)
tests/: test_agent_memory_and_verified.py  test_autonomy_pipeline.py  test_controller_and_fabric.py  test_distribution_artifacts.py  test_distribution_builder.py  test_exact_and_codecs.py  test_integration_and_training.py  test_monitoring.py  test_public_documentation.py  test_release_builder.py  test_trace_capture.py
(+45 files in other folders)
